--- a/Constellation WebApi/Constellation WebApi.csproj
+++ b/Constellation WebApi/Constellation WebApi.csproj
@@ -8,6 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
-    <PackageReference Include="Docker.DotNet" Version="3.125.5"/>
+    <PackageReference Include="Ductus.FluentDocker" Version="2.10.39"/>
   </ItemGroup>
 </Project>
