--- a/Constellation WebApi/Constellation WebApi.csproj
+++ b/Constellation WebApi/Constellation WebApi.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.39"/>
+    <PackageReference Include="CouchDB.Client" Version="1.0.13"/>
   </ItemGroup>
 </Project>
