--- a/db/local.ini
+++ b/db/local.ini
@@ -13,7 +13,8 @@
 ; exists for each document in _users. These databases are writable only
 ; by the corresponding user. Databases are in the following form:
 ; userdb-{hex encoded username}
-;enable = true
+enable = true
+delete_dbs = true
 ; If set to true and a user is deleted, the respective database gets
 ; deleted as well.
 ;delete_dbs = true
